Added structure to  main component

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,8 @@
-<p>main works!</p>
+<div class="container">
+  <section class="fire-map">
+    <!--    include map component here-->
+  </section>
+  <section class="fire-list">
+    <!--    include list component here-->
+  </section>
+</div>
