--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-*,*::after,*::before{
-  box-sizing: border-box;
+html, body {
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
 }
 
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+*, *::after, *::before {
+  box-sizing: border-box;
+}
 
 
 @mixin for-phone-only {
