The rest of the navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,9 @@
-<img src="/assets/icfire-logo.jpg">
+<img src="/assets/icfire-logo.jpg" alt="logo">
+<div *ngIf="localStorage.getItem('username'); else login" class="buttons">
+  <a (click)="onLogOut($event)">LOG OUT</a>
+</div>
+<ng-template #login>
+  <div class="buttons">
+    <a (click)="onLogIn($event)">LOG IN</a>
+  </div>
+</ng-template>
