added category icon

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,5 +4,6 @@
   </section>
   <section class="fire-list">
     <!--    include list component here-->
+    <app-fire-list></app-fire-list>
   </section>
 </div>
