Added basic registration  panel

--- a/src/app/components/login-panel/login-panel.component.html
+++ b/src/app/components/login-panel/login-panel.component.html
@@ -5,7 +5,7 @@
     <input #username type="text" name="" placeholder="Username">
     <input #password type="password" name="" placeholder="Password">
   </div>
-  <input type="submit" name="login" value="Login">
+  <input type="submit" name="login" value="Login" (click)="tryLogin()">
   <input type="submit" name="newaccount" value="Create an account">
 
 </mat-card>
