--- a/src/app/components/login-panel/login-panel.component.scss
+++ b/src/app/components/login-panel/login-panel.component.scss
@@ -4,8 +4,7 @@
     justify-content: center;
 }
 
-.box h4
-{
+.box h4 {
     text-align: center;
     font-family: verdana;
     text-transform: uppercase;
@@ -48,8 +47,7 @@
     transition: 5s;
 }
 
-.box input[name="newaccount"]
-{
+.box input[name="newaccount"] {
     border: 0;
     text-align: end;
 }
