--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -8,6 +8,11 @@
   //padding: 10px;
 
   @include mat-elevation(6);
+
+  position: sticky;
+  top: 0;
+  z-index: 10000;
+  background-color: white;
 }
 
 img {
