--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,9 +1,4 @@
 <div class="container">
-  <section class="fire-map">
-    <!--    include map component here-->
-  </section>
-  <section class="fire-list">
-    <!--    include list component here-->
-    <app-fire-list></app-fire-list>
-  </section>
+  <app-map class="fire-map"></app-map>
+  <section class="fire-list"></section>
 </div>
