Login Panel and Registration Panel as a dialogs

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,6 @@
 </div>
 <ng-template #login>
   <div class="buttons">
-    <a (click)="onLogIn($event)">LOG IN</a>
+    <a (click)="openDialog()">LOG IN</a>
   </div>
 </ng-template>
