--- a/src/app/components/login-panel/login-panel.component.html
+++ b/src/app/components/login-panel/login-panel.component.html
@@ -1,11 +1,13 @@
 
-<mat-card class="box">
-  <h4>Log in</h4>
-  <div>
+<div class="box">
+  <h4 mat-dialog-title>Log in</h4>
+  <div mat-dialog-content>
     <input #username type="text" name="" placeholder="Username">
     <input #password type="password" name="" placeholder="Password">
   </div>
+  <div mat-dialog-actions>
   <input type="submit" name="login" value="Login" (click)="tryLogin()">
-  <input type="submit" name="newaccount" value="Create an account">
+  <input type="submit" name="newaccount" value="Create an account" (click)="openDialog()">
+  </div>
 
-</mat-card>
+</div>
