--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <app-map class="fire-map"></app-map>
-  <section class="fire-list"></section>
+  <app-map></app-map>
+  <app-fire-list></app-fire-list>
 </div>
