Login/registration working

--- a/src/app/components/login-panel/login-panel.component.html
+++ b/src/app/components/login-panel/login-panel.component.html
@@ -7,7 +7,7 @@
   </div>
   <div mat-dialog-actions>
   <input type="submit" name="login" value="Login" (click)="tryLogin()">
-  <input type="submit" name="newaccount" value="Create an account" (click)="openDialog()">
+  <input type="submit" name="newaccount" value="Create an account" (click)="openRegisterDialog()">
   </div>
 
 </div>
