--- a/src/app/components/fire-list/fire-list.component.html
+++ b/src/app/components/fire-list/fire-list.component.html
@@ -1,52 +1,40 @@
-<mat-card *ngFor="let fire of fires">
-
-
+<mat-card *ngFor="let fire of fires" routerLink="details/{{fire.id}}">
   <div class="card-row">
-    <div class="upper-line">
+    <div class="primary-line">
+      <button mat-raised-button class="fire-approve icon-category" (click)="add()">
+        <img src="assets/fire.png" class="icon invert" alt="">
+        {{ fire.fireReportApproveCounter }}
+      </button>
+      <button mat-mini-fab *ngIf="fire.isReal" class="icon-category icon-category--questionmark">
+        <img src="assets/questionmark.jpg" class="icon invert" alt="">
+      </button>
+      <button mat-mini-fab *ngIf="fire.isFireTeam" class="icon-category icon-category--firefighter">
+        <img src="assets/firefighter.png" class="icon firefighter" alt="">
 
-      <h4>
-        {{ fire.description }}
-      </h4>
-
+      </button>
       <span class="spacer"></span>
       <p class="date">
         <mat-icon>schedule</mat-icon>
         {{ fire.startDate }}
       </p>
     </div>
-    <div class="bottom-line">
+    <div class="upper-line">
       <p>
         <mat-icon>room</mat-icon>
       </p>
       <p>{{ fire.address}}</p>
 
       <span class="spacer"></span>
-      <button mat-mini-fab [disabled]="!fire.arePeople" class="icon-category icon-category--human">
-        <mat-icon>
-          accessibility
-        </mat-icon>
-      </button>
-      <button mat-mini-fab [disabled]="! fire.isBuilding " class="icon-category icon-category--building">
-        <mat-icon>
-          house
-        </mat-icon>
-      </button>
-      <button mat-mini-fab [disabled]="!fire.isWood " class="icon-category icon-category--leaf">
-        <mat-icon>
-          eco
-        </mat-icon>
-      </button>
-      <button mat-mini-fab [disabled]="!fire.isElectricity " class="icon-category icon-category--electricity">
-        <mat-icon>
-          flash_on
-        </mat-icon>
-      </button>
-      <button mat-mini-fab [disabled]="! fire.isHazardousMaterial " class="icon-category icon-category--danger">
-        <mat-icon>
-          format_color_fill
-        </mat-icon>
-      </button>
-    </div>
-  </div>
 
+    </div>
+    <div class="bottom-line">
+
+
+      <h4>
+        {{ fire.description }}
+      </h4>
+
+    </div>
+
+  </div>
 </mat-card>
