--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,9 @@
 <div class="container">
   <app-map></app-map>
-  <app-fire-list></app-fire-list>
+  <div class="router">
+
+  <router-outlet></router-outlet>
+
+  </div>
+<!--  <app-fire-list></app-fire-list>-->
 </div>
