--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@ body {
 }
 
 
+
 @mixin for-phone-only {
   @media (max-width: 599px) {
     @content;
@@ -50,4 +51,23 @@ body {
   @media (min-width: 1800px) {
     @content;
   }
+}
+
+
+::ng-deep .snackbar {
+  &-info {
+    background: #3f51b5;
+    color: white;
+  }
+
+  &-error {
+    color: white;
+    background: red;
+  }
+
+  &-save {
+    color: white;
+    background: #27ae60;
+  }
+
 }
