--- a/src/app/components/registration-panel/registration-panel.component.html
+++ b/src/app/components/registration-panel/registration-panel.component.html
@@ -11,6 +11,8 @@
       'visibility_off'}}</mat-icon>
     <mat-error *ngIf="fPassword.errors&&fPassword.errors.pattern">{{errorMgs}}</mat-error>
 
+    <app-map-picker></app-map-picker>
+
   </div>
   <div mat-dialog-actions>
 
