Added report fire panel

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -17,6 +17,15 @@
 
 img {
   height: 80px;
+
+
+}
+
+.fire{
+  font-weight: 700;
+  text-transform: uppercase;
+
+
 }
 
 .buttons {
@@ -37,3 +46,4 @@ img {
     background-color: deepskyblue;
   }
 }
+
