--- a/src/app/components/fire-details/fire-details.component.html
+++ b/src/app/components/fire-details/fire-details.component.html
@@ -25,7 +25,7 @@
 
 
   <div class="card--content">
-    <button mat-raised-button class="fire-approve btn-fire icon-category">
+    <button (click)="onReport($event)" mat-raised-button class="fire-approve btn-fire icon-category">
       <img src="assets/fire.png" class="icon invert" alt="">
       {{ fire.fireReportApproveCounter }}
     </button>
