--- a/src/app/components/fire-details/fire-details.component.html
+++ b/src/app/components/fire-details/fire-details.component.html
@@ -1,7 +1,7 @@
 <!--    <div mat-card-avatar class="example-header-image"></div>-->
 
 
-<div class="card">
+<div class="card" *ngIf="fire">
 
 
   <div class="fire-avatar">
