added maps button

--- a/src/app/components/fire-list/fire-list.component.html
+++ b/src/app/components/fire-list/fire-list.component.html
@@ -39,3 +39,8 @@
 
   </div>
 </mat-card>
+
+<div class="no-content" *ngIf="!fires.length">
+  <img src="assets/smile.svg" class="icon-smile" alt="">
+  <h4>World is safe and has no fire!</h4>
+</div>
