--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,1 +1,16 @@
-<div id="map"></div>
+<div id="map">
+  <button mat-raised-button>
+    <img src="assets/fire.svg" alt="">
+    Report Fire
+    <img src="assets/fire.svg" alt="">
+  </button>
+  <div>
+    <mat-slide-toggle
+      mat-slide-toggle
+      class="example-margin"
+      [checked]="checked"
+      color="primary">
+      <img src="assets/nasa.png" class="icon" alt="">
+    </mat-slide-toggle>
+  </div>
+</div>
