--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -14,7 +14,7 @@
   }
 }
 
-.router{
+.router {
   background: grey;
   overflow-y: scroll;
   padding: 0 8px;
@@ -22,6 +22,7 @@
   height: calc(100vh - 80px);
 
   @include for-phone-only {
-    height: auto !important;
+    height: auto;
+    min-height: calc(50vh - 80px);
   }
 }
