--- a/src/app/components/registration-panel/registration-panel.component.html
+++ b/src/app/components/registration-panel/registration-panel.component.html
@@ -11,7 +11,7 @@
       'visibility_off'}}</mat-icon>
     <mat-error *ngIf="fPassword.errors&&fPassword.errors.pattern">{{errorMgs}}</mat-error>
 
-    <app-map-picker></app-map-picker>
+    <app-map-picker (coords)="updateCoords($event)"></app-map-picker>
 
   </div>
   <div mat-dialog-actions>
@@ -21,8 +21,7 @@
         add
       </mat-icon>
     </button>
-
-    <input type="submit" name="newaccount" value="Save" (click)="addUser(user)">
+    <input type="submit" name="newaccount" value="Save" (click)="addUser()">
   </div>
 
 </div>
