fix fire details
fix fire details

--- a/src/app/components/fire-details/fire-details.component.html
+++ b/src/app/components/fire-details/fire-details.component.html
@@ -5,7 +5,7 @@
 
 
   <div class="fire-avatar">
-    <img src="assets/fireAvatar.png" alt="">
+    <img src="assets/fire3.jpg" alt="">
     <button mat-icon-button class="back-btn" (click)="backClicked()">
       <mat-icon>arrow_back</mat-icon>
     </button>
@@ -25,7 +25,7 @@
 
 
   <div class="card--content">
-    <button (click)="onReport($event)" mat-raised-button class="fire-approve btn-fire icon-category">
+    <button mat-raised-button class="fire-approve btn-fire icon-category">
       <img src="assets/fire.png" class="icon invert" alt="">
       {{ fire.fireReportApproveCounter }}
     </button>
