--- a/src/app/components/fire-details/fire-details.component.scss
+++ b/src/app/components/fire-details/fire-details.component.scss
@@ -30,7 +30,7 @@ mat-card {
   }
 
   &--questionmark {
-    background: darkblue;
+    background: #00a4fff7;
   }
 
   &--firefighter {
@@ -100,6 +100,7 @@ mat-card {
     position: absolute;
     top: 4px;
     left: 4px;
+    color: white;
   }
 
   &--title {
@@ -107,6 +108,7 @@ mat-card {
     bottom: 0;
     left: 10px;
     margin-bottom: 10px;
+    color: white;
   }
 
   .desc {
