--- a/src/app/components/fire-list/fire-list.component.scss
+++ b/src/app/components/fire-list/fire-list.component.scss
@@ -63,7 +63,7 @@ mat-card {
   margin-right: 4px !important;
 
   &--questionmark {
-    background: darkblue;
+    background: #00a4fff7;
   }
 
   &--firefighter {
