--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="map" leaflet [leafletOptions]="options" (leafletMapReady)="onMapReady($event)">
-  <button mat-raised-button>
+  <button mat-raised-button (click)="createReport()">
     <img src="assets/fire.svg" alt="">
     Report Fire
     <img src="assets/fire.svg" alt="">
@@ -9,6 +9,7 @@
       mat-slide-toggle
       class="example-margin"
       [checked]="checked"
+      (click)="getNasaFires()"
       color="primary">
       <img src="assets/nasa.png" class="icon" alt="">
     </mat-slide-toggle>
