--- a/src/app/components/fire-details/fire-details.component.scss
+++ b/src/app/components/fire-details/fire-details.component.scss
@@ -12,7 +12,7 @@ mat-card {
 
   &--building {
 
-    background: deepskyblue;
+    background: #673ab7;
   }
 
   &--leaf {
@@ -57,7 +57,7 @@ mat-card {
 }
 
 .icon {
-  width: 24px!important;
+  width: 24px !important;
   height: 24px;
 }
 
