--- a/src/app/components/login-panel/login-panel.component.scss
+++ b/src/app/components/login-panel/login-panel.component.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  padding: 8px;
 }
 
 .box h4 {
@@ -17,6 +19,7 @@
   margin: 20px auto;
   text-align: center;
   border: 2px solid;
+  width: 100%;
   padding: 14px 10px;
   width: 200px;
   outline: none;
@@ -47,4 +50,9 @@
 .box input[name="newaccount"] {
   border: 0;
   text-align: end;
+}
+
+button{
+  width: 100%;
+  margin-bottom: 4px;
 }
